product-service/src/main/java/com/example/productservice/error/exception/DuplicateException.java
package com.example.productservice.error.exception;

public class DuplicateException extends RuntimeException{
    public DuplicateException(String message) {
        super(message);
    }
}
